--- a/fase2/02/desafio-02-2/index.html
+++ b/fase2/02/desafio-02-2/index.html
@@ -17,6 +17,15 @@
             <a href="tel:+5547992078767" target="_blank">Telefone</a>
         </div>
     </header>
+
+    <footer>
+        <div id="links-footer" class="menu">
+            <a href="https://github.com/Rocketseat" target="_blank">Github</a>
+            <a href="https://www.linkedin.com/school/rocketseat/about/" target="_blank">LinkedIn</a>
+            <a href="https://www.facebook.com/rocketseat/" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com/rocketseat_oficial/" target="_blank">Instagram</a>
+        </div>
+    </footer>
 </body>
 
 </html>
