--- a/fase2/02/desafio-02-2/sobre.html
+++ b/fase2/02/desafio-02-2/sobre.html
@@ -36,6 +36,15 @@
         </section>
     </main>
 
+    <footer>
+        <div id="links-footer" class="menu">
+            <a href="https://github.com/Rocketseat" target="_blank">Github</a>
+            <a href="https://www.linkedin.com/school/rocketseat/about/" target="_blank">LinkedIn</a>
+            <a href="https://www.facebook.com/rocketseat/" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com/rocketseat_oficial/" target="_blank">Instagram</a>
+        </div>
+    </footer>
+
 </body>
 
 </html>
