--- a/fase2/02/desafio-02-3/conteudos.html
+++ b/fase2/02/desafio-02-3/conteudos.html
@@ -5,6 +5,7 @@
     <title>Desafio 2-3: Página de cursos e iframe</title>
     <link rel="icon" href="assets/ico/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -23,29 +24,56 @@
             <h1>Conteúdos</h1>
         </div>
         <section class="cards">
-            <div class="card">
+            <div id="starter" class="card">
                 <div class="card-img">
                     <img src="https://skylab.rocketseat.com.br/static/64c237ccff807c054339a62d53b4b402.svg" alt="Starter">
                 </div>
                 <div class="card-content">
+                    <h3>Starter</h3>
+                </div>
+                <div class="card-info">
+                    <p>5 módulos</p>
+                    <p class="card-price">FREE</p>
                 </div>
             </div>
-            <div class="card">
+            <div id="launchbase" class="card">
                 <div class="card-img">
                     <img src="https://skylab.rocketseat.com.br/static/0828532024cb46921a6b5e941f8d788d.svg" alt="LaunchBase">
                 </div>
                 <div class="card-content">
+                    <h3>LaunchBase</h3>
+                </div>
+                <div class="card-info">
+                    <p>17 módulos</p>
+                    <p class="card-price">PAY</p>
                 </div>
             </div>
-            <div class="card">
+            <div id="gostack" class="card">
                 <div class="card-img">
                     <img src="https://skylab.rocketseat.com.br/static/83a178a0653dab1d55e2ed7946465975.svg" alt="GoStack">
                 </div>
                 <div class="card-content">
+                    <h3>GoStack</h3>
+                </div>
+                <div class="card-info">
+                    <p>10 módulos</p>
+                    <p class="card-price">PAY</p>
                 </div>
             </div>
         </section>
+        <div class="modal-overlay">
+            <div class="modal">
+                <a class="close-modal">
+                    <i class="material-icons">close</i>
+                </a>
+                <div class="modal-content">
+                    <iframe src="" frameborder="0"></iframe>
+                </div>
+            </div>
+        </div>
     </main>
+
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
