--- a/fase2/02/desafio-02-3/conteudos.html
+++ b/fase2/02/desafio-02-3/conteudos.html
@@ -63,6 +63,9 @@
         </section>
         <div class="modal-overlay">
             <div class="modal">
+                <a class="btn-maximize">
+                    <i class="material-icons">aspect_ratio</i>
+                </a>
                 <a class="close-modal">
                     <i class="material-icons">close</i>
                 </a>
