--- a/fase2/02/desafio-02-3/index.html
+++ b/fase2/02/desafio-02-3/index.html
@@ -8,16 +8,18 @@
 </head>
 
 <body>
-    <header>
-        <div class="menu">
-            <a href="index.html">Home</a>
-            <a href="sobre.html">Sobre</a>
-            <a href="conteudos.html">Conteúdos</a>
-            <a href="http://discordapp.com/invite/gCRAFhc" target="_blank">Comunidade</a>
-            <a href="mailto:oi@rocketseat.com.br" target="_blank">Email</a>
-            <a href="tel:+5547992078767" target="_blank">Telefone</a>
-        </div>
-    </header>
+    <main>
+        <header>
+            <div class="menu">
+                <a href="index.html">Home</a>
+                <a href="sobre.html">Sobre</a>
+                <a href="conteudos.html">Conteúdos</a>
+                <a href="http://discordapp.com/invite/gCRAFhc" target="_blank">Comunidade</a>
+                <a href="mailto:oi@rocketseat.com.br" target="_blank">Email</a>
+                <a href="tel:+5547992078767" target="_blank">Telefone</a>
+            </div>
+        </header>
+    </main>
 </body>
 
 </html>
