Created the index page and adjusted CSS.

--- a/fase2/02/desafio-foodfy/index.html
+++ b/fase2/02/desafio-foodfy/index.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
     <title>Foodfy</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <meta charset="utf-8">
 </head>
 
 <body>
     <header>
-        <div class="logo">
-            <img src="assets/img/logo.png" alt="Logo Foodfy">
-        </div>
-        <nav class=" menu ">
-
+        <nav class="navbar">
+            <div class="logo">
+                <img src="assets/img/logo.png" alt="Logo Foodfy">
+            </div>
+            <div class="menu">
+                <a href="/">Sobre</a>
+                <a href="/">Receitas</a>
+            </div>
         </nav>
     </header>
+    <section class="contain">
+        <article class="text-contain">
+            <div class="description">
+                <h1>As melhores receitas</h1>
+                <p>Aprenda a construir os melhores pratos com receitas criadas por profissionais do mundo inteiro.</p>
+            </div>
+        </article>
+        <div class="img-contain">
+            <img src="assets/img/chef.png" alt="Chef">
+        </div>
+    </section>
+    <section class="most-accessed">
 
+    </section>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
