Layout adjustments and card inclusion.

--- a/fase2/02/desafio-foodfy/index.html
+++ b/fase2/02/desafio-foodfy/index.html
@@ -30,8 +30,18 @@
             <img src="assets/img/chef.png" alt="Chef">
         </div>
     </section>
-    <section class="most-accessed">
+    <section class="accessed">
+        <h1>Mais acessadas</h1>
+        <div class="most-accessed">
+            <div class="card-accessed">
+                <div class="img-accessed">
+                    <img src="assets/img/burger.png" alt="Burguer">
+                </div>
+                <div class="card-content-accessed">
 
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
