Finalizado a página home e feito ajustes no CSS

--- a/fase2/02/desafio-foodfy/index.html
+++ b/fase2/02/desafio-foodfy/index.html
@@ -38,14 +38,60 @@
                     <img src="assets/img/burger.png" alt="Burguer">
                 </div>
                 <div class="card-content-accessed">
-
+                    <h3>Triplo bacon burguer</h3>
+                    <span class="author">por Jorge Relato</span>
+                </div>
+            </div>
+            <div class="card-accessed">
+                <div class="img-accessed">
+                    <img src="assets/img/pizza.png" alt="Burguer">
+                </div>
+                <div class="card-content-accessed">
+                    <h3>Pizza 4 estações</h3>
+                    <span class="author">por Fabiana Melo</span>
+                </div>
+            </div>
+            <div class="card-accessed">
+                <div class="img-accessed">
+                    <img src="assets/img/espaguete.png" alt="Burguer">
+                </div>
+                <div class="card-content-accessed">
+                    <h3>Espaguete ao alho</h3>
+                    <span class="author">por Júlia Kinoto</span>
+                </div>
+            </div>
+            <div class="card-accessed">
+                <div class="img-accessed">
+                    <img src="assets/img/lasanha.png" alt="Burguer">
+                </div>
+                <div class="card-content-accessed">
+                    <h3>Lasanha mac n' cheese</h3>
+                    <span class="author">por Jorge Relato</span>
+                </div>
+            </div>
+            <div class="card-accessed">
+                <div class="img-accessed">
+                    <img src="assets/img/doce.png" alt="Burguer">
+                </div>
+                <div class="card-content-accessed">
+                    <h3>Docinhos pão-do-céu</h3>
+                    <span class="author">por Jorge Relato</span>
+                </div>
+            </div>
+            <div class="card-accessed">
+                <div class="img-accessed">
+                    <img src="assets/img/asinhas.png" alt="Burguer">
+                </div>
+                <div class="card-content-accessed">
+                    <h3>Assinhas de frango ao barbecue</h3>
+                    <span class="author">por Jorge Relato</span>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer>
-
+    <footer class="footer">
+        <h6>Todos direitos reservados, receitas Foodfy.</h6>
     </footer>
 </body>
 
