--- a/fase2/02/desafio-foodfy/index.html
+++ b/fase2/02/desafio-foodfy/index.html
@@ -14,7 +14,7 @@
                 <img src="assets/img/logo.png" alt="Logo Foodfy">
             </div>
             <div class="menu">
-                <a href="/">Sobre</a>
+                <a href="about.html">Sobre</a>
                 <a href="/">Receitas</a>
             </div>
         </nav>
